syntax = "proto3";

option java_multiple_files = true;
option java_package = "personal.kostera.kotlin.grpc.poc";
option java_outer_classname = "PingPongProto";
option objc_class_prefix = "PP";

package poc;

// The greeting service definition.
service PingService {
  // Sends a ping - simple RPC request - response
  rpc Ping(PingRequest) returns (PingResponse) {}
  // A server-side streaming RPC
  rpc GetCharacters(StringRequest) returns (stream StringResponse) {}
  // A client-side streaming RPC
  rpc GetWord(stream StringRequest) returns (StringResponse) {}
  // A bidirectional streaming RPC
  rpc GetWordOrMore(stream StringRequest) returns (stream StringResponse) {}
}

// The request message containing the message.
message PingRequest {
  string message = 1;
  int32 counter = 2;
}

// The response message containing the message
message PingResponse {
  string message = 1;
}

message StringRequest {
  string message = 1;
}

message StringResponse {
  string message = 1;
}